<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SlimDugong</string>
    <string name="facebook_app_id">1456855687868401</string>
    <string name="facebook_shared_message">วันนี้เราทานไป %1$s แครอรี่ ออกกำลังกายไป %2$s แครอรี่ มาดูแลสุขภาพด้วยกันเถอะ</string>
    
    <string name="defualt_ok">ตกลง</string>    
    <string name="defualt_cancel">ยกเลิก</string>
    <string name="defualt_title_error">An error occurred</string>
    <string name="default_close">ปิด</string>
    <string name="default_confirm">ยืนยัน</string>
    <string name="default_delete_selected">ลบที่เลือก</string>
    
    <string name="delete_multiple_confirm">ยืนยันที่จะลบ %1$s รายการ</string>
    <string name="delete_select_at_least_1">กรุณาเลือกอย่างน้อย 1 รายการ</string>
    
    <string name="select_dish">เลือกรายการอาหาร</string>
    <string name="select_dish_action">ทานอาหาร/แสกนบาร์โค้ด</string>
    <string name="select_dish_scan_barcode">แสกนบาร์โค้ด</string>
    <string name="select_dish_recent">ล่าสุด</string>
    <string name="select_dish_calories">แคลรอรี่</string>
    <string name="select_dish_dialog_fat">ไขมัน</string>
    <string name="select_dish_dialog_energy">พลังงาน :</string>
    
    <string name="exercise">เลือกรายการออกกำลังกาย</string>
    <string name="exercise_action">ออกกำลังกาย</string>
    <string name="exercise_recent_tab">ล่าสุด</string>
    <string name="exercise_tab">ออกกำลังกาย</string>
    <string name="consume_tab">บริโภค</string>
    <string name="exercise_bph">BPH</string>
    <string name="default_hours">ชั่วโมง</string>
    <string name="default_miniutes">นาที</string>
    <string name="default_seconds">วินาที</string>
    <string name="default_ago">ที่แล้ว</string>
    
    <string name="update_action">อัพเดตฐานข้อมูล</string>
    <string name="update_on_checking">กำลังตรวจหาเวอร์ชันใหม่&#8230;</string>
    <string name="update_on_downloading">กำลังดาวน์โหลด&#8230;</string>
    <string name="update_success">อัพเดตฐานข้อมูลสำเร็จ</string>
    <string name="update_already_latest">ฐานข้อมูลเป็นเวอร์ชันล่าสุดแล้ว</string>
    
    <string name="create_character">สร้างตัวละคร</string>
    
    <string name="bmi">โปรแกรมคำนวณ BMI</string>
    <string name="bmi_action">โปรแกรมคำนวณ BMI</string>
    <string name="bmi_name">คำนวณ BMI</string>
    <string name="weight">น้ำหนัก :</string>
    <string name="height">ส่วนสูง :</string>
    <string name="weight_kg">กก.</string>
    <string name="height_cm">ซม.</string>
    <string name="bmi_invalid_input_msg">กรุณากรอกข้อมูลให้ครบถ้วนและถูกต้อง</string>
    <string name ="bmi_result_name">ค่า BMI ของคุณเท่ากับ</string>
    <string name ="bmi_result_1">น้ำหนักคุณน้อยมากๆ คุณแทบจะไม่มีน้ำหนักเลย คุณอาจจะกรอกค่าน้ำหนักหรือส่วนสูงผิด กรุณากรอกใหม่</string>
    <string name ="bmi_result_2">น้ำหนักน้อยเกินไป ซึ่งอาจจะเกิดจากนักกีฬาที่ออกกำลังกายมาก และได้รับสารอาหารไม่เพียงพอ วิธีแก้ไขต้องรับประทานอาหารที่มีคุณภาพ และมีปริมาณพลังงานเพียงพอ และออกกำลังกายอย่างเหมาะสม</string>
    <string name ="bmi_result_3">น้ำหนักปกติ และมีปริมาณไขมันอยู่ในเกณฑ์ปกติ มักจะไม่ค่อยมีโรคร้าย อุบัติการณ์ของโรคเบาหวาน ความดันโลหิตสูงต่ำกว่าผู้ที่อ้วนกว่านี้</string>
    <string name ="bmi_result_4">โรคอ้วนระดับ1 และหากคุณมีเส้นรอบเอวมากกว่า                  90 ซม.(ชาย) 80 ซม.(หญิง) คุณจะมีโอกาศเกิดโรคความดัน เบาหวานสูง จำเป็นต้องควบคุมอาหาร และออกกำลังกาย</string>
	<string name ="bmi_result_5">โรคอ้วนระดับ2 คุณเสี่ยงต่อการเกิดโรคที่มากับความอ้วน หากคุณมีเส้นรอบเอวมากกว่าเกณฑ์ปกติ                คุณจะเสี่ยงต่อการเกิดโรคสูง คุณต้องควบคุมอาหาร และออกกำลังกายอย่างจริงจัง</string>
	<string name ="bmi_result_6">โรคอ้วนขั้นสูงสุด</string>
	<string name ="bmi_thin_name">ผอม</string>
	<string name ="bmi_fat_name">อ้วน</string>
	<string name ="bmi_carolies">แคลอรี่</string>
	
	<string name="edit_character">แก้ไขข้อมูลตัวละคร</string>
	<string name="edit_character_action">แก้ไขข้อมูลตัวละคร</string>
	
	<string name="review_today">จัดการรายการวันนี้</string>
	<string name="review_today_action">ดูรายการวันนี้</string>
	
	<string name="status_consume_full">อิ่มจัง กินมากไม่ดีนะ</string>
	<string name="status_consume_hungry">หิวจัง หาไรกินหน่อย</string>
	<string name="status_exercise_strong">แข็งแรงดีจัง</string>
	<string name="status_exercise_weak">ออกกำลังบ้างนะ</string>
	<string name="status_nothing_to_say"></string>
	
</resources>
