<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="th.ac.kmitl.it.slimdugong.MainActivity" >

    <item
        android:id="@+id/action_select_dish"
        android:title="@string/select_dish_action"
        />
    
    <item
        android:id="@+id/action_exercise"
        android:title="@string/exercise_action"
        />
    
    <item
        android:id="@+id/action_update"
        android:title="@string/update_action"
      />
    
	<item
        android:id="@+id/action_bmi"
        android:title="@string/bmi_action"
        />
	
	<item
        android:id="@+id/action_edit_character"
        android:title="@string/edit_character_action"
        />
	
</menu>
