<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/BMINAME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:text="@string/bmi_name"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/weightinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/WEIGHTNAME"
        android:layout_alignBottom="@+id/WEIGHTNAME"
        android:layout_alignLeft="@+id/bmi_confirm"
        android:layout_alignRight="@+id/bmi_confirm"
        android:ems="10"/>

    <Button
        android:id="@+id/bmi_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weightinput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="@string/default_confirm" />

    <EditText
        android:id="@+id/heightinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/weightinput"
        android:layout_alignRight="@+id/bmi_confirm"
        android:layout_alignTop="@+id/HEIGHTNAME"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/weight_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bmi_confirm"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/weightinput"
        android:text="@string/weight_kg"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/height_cm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/heightinput"
        android:layout_alignBottom="@+id/heightinput"
        android:layout_alignLeft="@+id/weight_kg"
        android:text="@string/height_cm"
        android:textSize="20dp" 
        />

    <TextView
        android:id="@+id/error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weightinput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text=""
        android:textSize="15dp"
        android:textColor="#FF0000"   />

    <TextView
        android:id="@+id/WEIGHTNAME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heightinput"
        android:layout_marginTop="62dp"
        android:layout_toLeftOf="@+id/weightinput"
        android:text="@string/weight"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/HEIGHTNAME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BMINAME"
        android:layout_marginTop="64dp"
        android:layout_toLeftOf="@+id/heightinput"
        android:text="@string/height"
        android:textSize="20dp" />

</RelativeLayout>
