<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	
	        <LinearLayout
	            android:layout_width="50dp"
	            android:layout_height="match_parent"
	            android:orientation="vertical" >
	
	            <ImageButton
	                android:id="@+id/lt_h"
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="0.33"
	                android:background="@drawable/btn_back"/>
	            <ImageButton
	                android:id="@+id/lt_t"
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="0.33"
	                android:background="@drawable/btn_back"/>
	            <ImageButton
	                android:id="@+id/lt_b"
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="0.33"
	                android:background="@drawable/btn_back"/>
	            
	        </LinearLayout>
	
	        <th.ac.kmitl.it.slimdugong.custom.view.CharacterView
	            android:id="@+id/character_view"
	            android:layout_width="0dp"
	            android:layout_height="333dp"
	            android:layout_weight="1" />
	
	        <LinearLayout
	            android:layout_width="50dp"
	            android:layout_height="match_parent"
	            android:orientation="vertical" >
	
	            <ImageButton
	                android:id="@+id/rt_h"
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="0.33"
	                android:background="@drawable/btn_next"/>
	            <ImageButton
	                android:id="@+id/rt_t"
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="0.33"
	                android:background="@drawable/btn_next"/>
	            <ImageButton
	                android:id="@+id/rt_b"
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="0.33"
	                android:background="@drawable/btn_next"/>
	            
	        </LinearLayout>
	    </LinearLayout>
	    
	    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
	            
                <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/weight" />	 
	            <EditText
	                android:id="@+id/user_weight"
		            android:layout_width="70sp"
		            android:layout_height="wrap_content" />	  
	            <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/weight_kg" />	 
		            
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
	            
                <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/height" />	 
	            <EditText
	                android:id="@+id/user_height"
		            android:layout_width="70sp"
		            android:layout_height="wrap_content" />	  
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/height_cm" />	
		            
            </TableRow>
            
        </TableLayout>
	    
	
	</LinearLayout>
	
    <ImageButton
        android:id="@+id/btn_confirm"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="30dp"
		android:background="@drawable/btn_confirm"/>
    
</RelativeLayout>